# local-voice

./: .dockerignore  .gitignore  AGENTS.md  CONTRIBUTING.md  LICENSE  README.md  THIRD_PARTY_NOTICES.md  doctor.sh  index.html  package-lock.json  package.json  run-dev.sh  setup.sh  tsconfig.json  vite.config.ts
.github/: REPO_METADATA.md
.github/workflows/: ci.yml  release-appimage.yml
docker/: ubuntu-smoke.Dockerfile
docs/: desktop-verification.md  install-ubuntu.md  permissions-and-platforms.md  releasing.md  troubleshooting.md
python-backend/: pyproject.toml
python-backend/offline_voice_worker/: __init__.py  cli.py
scripts/: bootstrap-ubuntu.sh  build-package-linux.sh  doctor.sh  prepare-bundled-backend.sh  smoke-test-ubuntu-docker.sh  x11_automation.py
src/: main.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/resources/bundled-backend/: README.md
src-tauri/src/: lib.rs  main.rs
