[project]
name = "local-voice-backend"
version = "0.1.0"
description = "Local faster-whisper worker for Local Voice"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "faster-whisper>=1.1.0"
]

[project.scripts]
offline-voice-worker = "offline_voice_worker.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
