[package]
name = "local-voice"
version = "0.1.0"
edition = "2021"

[lib]
name = "local_voice_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["tray-icon"] }
tokio = { version = "1", features = ["macros", "process", "rt-multi-thread", "time"] }

[target.'cfg(any(target_os = "macos", windows, target_os = "linux"))'.dependencies]
arboard = "3"
enigo = "0.6"
tauri-plugin-global-shortcut = "2"
